Fix Facebook comments plugin responsiveness on iPhone by enforcing 100% width

--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -52,3 +52,8 @@
 .min-height-full {
   min-height: 100vh;
 }
+
+// Facebookコメントプラグインの幅を100%に設定
+.fb-comments iframe {
+  width: 100% !important;
+}
